[package]
name = "monkey-evaluator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "evaluator"
path= "lib.rs"

[[bin]]
name = "evaluator"
path = "main.rs"

[dependencies]
monkey-lexer = { path = "../lexer" }
monkey-parser = { path = "../parser" }
monkey-ast = { path = "../ast" }
monkey-symbol = { path = "../symbol" }
