[package]
name = "monkey-evaluator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "evaluator"
path= "lib.rs"

[[bin]]
name = "repl"
path = "repl.rs"

[[bin]]
name = "interpreter"
path = "interpreter.rs"

[dependencies]
monkey-lexer = { path = "../lexer" }
monkey-parser = { path = "../parser" }
monkey-symbol = { path = "../symbol" }
